--- a/Core.Application/Core.Application.csproj
+++ b/Core.Application/Core.Application.csproj
@@ -59,6 +59,7 @@
     <Folder Include="Broadcasters\Implementation\" />
     <Folder Include="Models\" />
     <Folder Include="Injection\" />
+    <Folder Include="Presenters\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Core.Domain\Core.Domain.csproj">
