--- a/Core.Application/Core.Application.csproj
+++ b/Core.Application/Core.Application.csproj
@@ -60,6 +60,7 @@
     <Folder Include="Models\" />
     <Folder Include="Injection\" />
     <Folder Include="Presenters\" />
+    <Folder Include="Context\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Core.Domain\Core.Domain.csproj">
